--- a/package.json
+++ b/package.json
@@ -1,32 +1,68 @@
 {
-  "name": "backend",
+  "name": "produtos-api",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon index.js --ignore __tests__",
-    "start": "node index.js",
+    "ng": "ng",
+    "prestart": "sequelize db:migrate",
+    "start": "node server",
+    "dev": "NODE_ENV=development nodemon server --ignore ./server/__tests__",
+    "build": "ng build",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "NODE_ENV=test npm-run-all run-test run-after-test --continue-on-error",
     "run-test": "NODE_ENV=test jest --runInBand",
-    "run-after-test": "NODE_ENV=test sequelize db:migrate:undo:all"
+    "run-after-test": "NODE_ENV=test sequelize db:migrate:undo:all",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path dist --prod"
   },
+  "private": true,
   "dependencies": {
+    "@angular/animations": "~10.1.2",
+    "@angular/common": "~10.1.2",
+    "@angular/compiler": "~10.1.2",
+    "@angular/core": "~10.1.2",
+    "@angular/forms": "~10.1.2",
+    "@angular/platform-browser": "~10.1.2",
+    "@angular/platform-browser-dynamic": "~10.1.2",
+    "@angular/router": "~10.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.1",
-    "sequelize": "^6.3.5"
+    "pg": "^8.3.3",
+    "rxjs": "~6.6.0",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1001.2",
+    "@angular/cli": "~10.1.2",
+    "@angular/compiler-cli": "~10.1.2",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2",
     "@types/jest": "^26.0.14",
     "factory-girl": "^5.0.4",
     "faker": "^5.1.0",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0",
     "supertest": "^4.0.2"
   }
