--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,11 +1,12 @@
 const path = require('path');
 module.exports = {
-  config: path.resolve(__dirname, 'src', 'config', 'config.js'),
+  config: path.resolve(__dirname, 'server', 'src', 'config', 'config.js'),
   'migrations-path': path.resolve(
     __dirname,
+    'server',
     'src',
     'database',
     'migrations'
   ),
-  'models-path': path.resolve(__dirname, 'src', 'app', 'models'),
+  'models-path': path.resolve(__dirname, 'server', 'src', 'app', 'models'),
 };
