--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "moment": "^2.28.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.1",
     "pg": "^8.3.3",
