--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.28.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.1",
+    "ng2-currency-mask": "^9.0.2",
     "pg": "^8.3.3",
     "rxjs": "~6.6.0",
     "sequelize": "^6.3.5",
