--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.2",
     "@angular/material": "^10.2.1",
+    "@angular/material-moment-adapter": "^10.2.1",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
