--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "prestart": "sequelize db:migrate",
+    "create-db": "sequelize db:create",
+    "prestart": "npm run create-db && sequelize db:migrate",
     "start": "node server",
+    "predev": "npm run create-db",
     "dev": "NODE_ENV=development nodemon server --ignore ./server/__tests__",
     "build": "ng build",
     "pretest": "NODE_ENV=test sequelize db:migrate",
